[gd_scene load_steps=11 format=3 uid="uid://c2mme2p7fp364"]

[ext_resource type="Script" path="res://dev/contain.gd" id="1_0p4gw"]
[ext_resource type="Texture2D" uid="uid://cbgctaihplw5u" path="res://tiles_pic/conwaytiles.png" id="2_5hhf0"]
[ext_resource type="Texture2D" uid="uid://cskd66knv8pmw" path="res://tiles_pic/redbug.png" id="3_nq0y5"]
[ext_resource type="Texture2D" uid="uid://dcleaqi36skfb" path="res://tiles_pic/black_border.png" id="4_3bkn6"]
[ext_resource type="Texture2D" uid="uid://dg11ltelt4iau" path="res://tiles_pic/blue_border.png" id="5_8ytgx"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3i75w"]
texture = ExtResource("2_5hhf0")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/next_alternative_id = 3
15:2/0 = 0
15:2/1 = 1
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/next_alternative_id = 2
5:3/0 = 0
5:3/1 = 1
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2v1fh"]
texture = ExtResource("3_nq0y5")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/1 = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xhmq1"]
texture = ExtResource("4_3bkn6")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kqi5a"]
texture = ExtResource("5_8ytgx")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/1 = 1

[sub_resource type="TileSet" id="TileSet_1x4ce"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_3i75w")
sources/1 = SubResource("TileSetAtlasSource_2v1fh")
sources/2 = SubResource("TileSetAtlasSource_xhmq1")
sources/3 = SubResource("TileSetAtlasSource_kqi5a")

[node name="bound" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="contain" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 90.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0p4gw")

[node name="TileMapLayer" type="TileMapLayer" parent="contain"]
tile_set = SubResource("TileSet_1x4ce")

[node name="ButtonHolder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -638.0
offset_right = 638.0
offset_bottom = 87.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonHolder"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.0
offset_right = 263.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_constants/separation = 70

[node name="Save" type="Button" parent="ButtonHolder/HBoxContainer"]
layout_mode = 2
text = "save"

[node name="clear" type="Button" parent="ButtonHolder/HBoxContainer"]
layout_mode = 2
text = "clear"

[node name="Button" type="Button" parent="ButtonHolder/HBoxContainer"]
layout_mode = 2
text = "dummy"

[node name="back" type="Button" parent="ButtonHolder/HBoxContainer"]
layout_mode = 2
text = "back"

[connection signal="pressed" from="ButtonHolder/HBoxContainer/Save" to="contain" method="_on_save_pressed"]
[connection signal="pressed" from="ButtonHolder/HBoxContainer/clear" to="contain" method="_on_clear_pressed"]
[connection signal="pressed" from="ButtonHolder/HBoxContainer/Button" to="contain" method="_on_button_pressed"]
[connection signal="pressed" from="ButtonHolder/HBoxContainer/back" to="contain" method="_on_back_pressed"]
